Added Empty functions and new GUI elements
/*ATTENTION*/
/*SKRATTAR DU FLÖRLAR DU*/
Before using the GUI, please download "GraphView" plugin first.
link: http://www.android-graphview.org/download-getting-started/

instructions: https://www.youtube.com/watch?v=zbTvJZX0UDk

See "Change notes.txt" in "GUI" folder for detailed changes

Next up:
- GUI for displaying permutations
- GUI for displaying character frequency
- GUI for encrypt/decrypt feature

--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/build.gradle
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "com.example.ekanugrahapratama.aardvark_project"
-        minSdkVersion 21
+        minSdkVersion 25
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -17,6 +17,8 @@ android {
         }
     }
     buildToolsVersion '27.0.1'
+    productFlavors {
+    }
 }
 
 dependencies {
@@ -29,4 +31,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.android.support:recyclerview-v7:24.1.1'
+    implementation files('libs/GraphView-4.2.1.jar')
 }
