--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/AndroidManifest.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/AndroidManifest.xml
@@ -10,21 +10,21 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".GUI_MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
 
         </activity>
         <activity
-            android:name=".projectView"
+            android:name=".GUI_projectView"
             android:label="@string/projectView_name"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".GUI_MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.ekanugrahapratama.aardvark_project.MainActivity"></meta-data>
+                android:value="com.example.ekanugrahapratama.aardvark_project.GUI_MainActivity"></meta-data>
         </activity>
         <activity
-            android:name=".Splash_FullScreen"
+            android:name=".GUI_Splash_FullScreen"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
