Added GUI for Encrypt/Decrypt feature and project rename
For more details, please see "Change notes.txt" in my folder.

+[GUI]Added basic error handling in MainActivity.java.
+[GUI]Added rename function for each project entry (Long press project entry).
+[GUI]Added Copy to clipboard and Paste from clipboard buttons for Encryption/Decryption feature, as a mean to get text input and cipher text result.
+[GUI]Added interface and empty functions for Encryption/Decryption feature.

--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/build.gradle
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/build.gradle
@@ -4,11 +4,12 @@ android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "com.example.ekanugrahapratama.aardvark_project"
-        minSdkVersion 25
-        targetSdkVersion 26
+        minSdkVersion 24
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        setProperty("archivesBaseName", "Aardvark-$versionName")
     }
     buildTypes {
         release {
