--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/AndroidManifest.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/AndroidManifest.xml
@@ -12,29 +12,27 @@
         <activity
             android:name=".GUI_MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
-
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".GUI_projectView"
             android:label="@string/projectView_name"
             android:parentActivityName=".GUI_MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.ekanugrahapratama.aardvark_project.GUI_MainActivity"></meta-data>
+                android:value="com.example.ekanugrahapratama.aardvark_project.GUI_MainActivity" />
         </activity>
         <activity
             android:name=".GUI_Splash_FullScreen"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                    <!-- THIS INTENT FILTER DEFINES WHICH ACTIVITY FIRST LAUNCHED WHEN THE APP RUNS -->
+                <!-- THIS INTENT FILTER DEFINES WHICH ACTIVITY FIRST LAUNCHED WHEN THE APP RUNS -->
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".GUI_EncryptionDecryption"></activity>
     </application>
 
 </manifest>
