Added undo and reset mechanism
but undo and reset is still using non static data storage

--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/AndroidManifest.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/AndroidManifest.xml
@@ -33,6 +33,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".GUI_Enc_Dec" />
+        <activity
+            android:name=".GUI_aboutUs"
+            android:label="@string/title_activity_gui_about_us"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
