Redesigning, Integrating, and bug fixes
- UI redesign (Frequency analysis), it is now fancier
- Some code refractoring and importing Mark's code into the android app
- Modified some Mark's code to return value needed for my code
- Added common word occurrences into the interface
- Frequency analysis is now sorted.
- Fixed a bug (Data lost when renaming project)

--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/AndroidManifest.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/AndroidManifest.xml
@@ -36,7 +36,11 @@
         <activity
             android:name=".GUI_aboutUs"
             android:label="@string/title_activity_gui_about_us"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".GUI_fragment_graph"
+            android:label="Frequency Analysis"
+            android:theme="@style/AppTheme" />
     </application>
 
 </manifest>
