- Added 'note' function - Some UI element redesigning

--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/AndroidManifest.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/AndroidManifest.xml
@@ -36,11 +36,12 @@
         <activity
             android:name=".GUI_aboutUs"
             android:label="@string/title_activity_gui_about_us"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".GUI_fragment_graph"
             android:label="Frequency Analysis"
             android:theme="@style/AppTheme" />
+        <activity android:name=".GUI_note"></activity>
     </application>
 
 </manifest>
