Added Kamasutra.java & getVigenereSquare() in Utility.java

--- a/Krypto_4_Java/build.gradle
+++ b/Krypto_4_Java/build.gradle
@@ -8,7 +8,7 @@
 
 /*
 // Apply the java plugin to add support for Java
-apply plugin: 'java'
+apply plugin:'java'
 
 // In this section you declare where to find the dependencies of your project
 repositories {
@@ -29,3 +29,11 @@ dependencies {
     testCompile 'junit:junit:4.12'
 }
 */
+apply plugin:'java'
+dependencies {
+    compile 'junit:junit:4.12'
+    compile 'junit:junit:4.12'
+    compile 'junit:junit:4.12'
+    compile 'junit:junit:4.12'
+    compile 'org.junit.jupiter:junit-jupiter-api'
+}
