--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/build.gradle
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.android.support:design:26.1.0'
     implementation files('libs/GraphView-4.2.1.jar')
+    implementation 'com.android.support:cardview-v7:26.1.0'
 }
