Bug fixes and new animation for GUI
- Fixed action bar CTD error bug (reported @26 January 2018)
- The user can now click on the graph in frequency analysis activity to expand the detailed information of the graph (now with animation!)
- Animated the search bar, so the user have to be at the top of the list to be able to see the search bar

--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/build.gradle
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/build.gradle
@@ -26,7 +26,7 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
-    dataBinding{
+    dataBinding {
         enabled true
     }
 }
@@ -44,6 +44,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.android.support:design:26.1.0'
     compile 'com.miguelcatalan:materialsearchview:1.4.0'
+    compile 'com.android.support:preference-v7:26.1.0'
     implementation files('libs/GraphView-4.2.1.jar')
     implementation 'com.android.support:cardview-v7:26.1.0'
 }
