--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/AndroidManifest.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/AndroidManifest.xml
@@ -10,19 +10,17 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.example.FYP.aardvark_project.GUI_MainActivity"
+            android:name=".GUI_MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="com.example.FYP.aardvark_project.GUI_project_view"
+            android:name=".GUI_project_view"
             android:label="@string/projectView_name"
-            android:parentActivityName="com.example.FYP.aardvark_project.GUI_MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.FYP.aardvark_project.GUI_MainActivity" />
+            android:theme="@style/AppTheme">
+
         </activity>
         <activity
-            android:name="com.example.FYP.aardvark_project.GUI_Splash_FullScreen"
+            android:name=".GUI_Splash_FullScreen"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
@@ -32,16 +30,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.example.FYP.aardvark_project.GUI_Enc_Dec" />
+        <activity android:name=".GUI_Enc_Dec" />
         <activity
-            android:name="com.example.FYP.aardvark_project.GUI_aboutUs"
+            android:name=".GUI_aboutUs"
             android:label="@string/title_activity_gui_about_us"
             android:theme="@style/AppTheme" />
         <activity
-            android:name="com.example.FYP.aardvark_project.GUI_fragment_graph"
+            android:name=".GUI_graph"
             android:label="Frequency Analysis"
             android:theme="@style/AppTheme" />
-        <activity android:name="com.example.FYP.aardvark_project.GUI_note"></activity>
+        <activity android:name=".GUI_note" />
+        <activity
+            android:name=".Settings"
+            android:label="@string/title_activity_settings" />
     </application>
 
 </manifest>
