--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/build.gradle
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "com.example.ekanugrahapratama.aardvark_project"
-        minSdkVersion 23
+        minSdkVersion 24
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -47,4 +47,9 @@ dependencies {
     compile 'com.android.support:preference-v7:26.1.0'
     implementation files('libs/GraphView-4.2.1.jar')
     implementation 'com.android.support:cardview-v7:26.1.0'
+
+    repositories {
+        mavenCentral()
+    }
+    compile 'com.sothree.slidinguppanel:library:3.4.0'
 }
