ignoring .idea file

--- a/.gitignore
+++ b/.gitignore
@@ -296,3 +296,4 @@ gradle-app.setting
 
 
 # End of https://www.gitignore.io/api/java,macos,gradle,windows,android,intellij,androidstudio
+Krypto_4_Java/\.idea/
